# MH850

./: CMakeLists.txt  Main.c  README.md
Functions/Atmosfera/: Atmosfera.c  Atmosfera.h
Functions/Calcolo_spinta_RPM/: Calcolo_spinta_RPM.c  Calcolo_spinta_RPM.h
Functions/Condizioni_trim/: Alpha_trim.c  Alpha_trim.h  Condizioni_trim.c  Condizioni_trim.h
Functions/Integrazione/: Integrazione.c  Integrazione.h
Functions/Interpolazione/: Interpolazione.c  Interpolazione.h
Functions/ManageFile/: ManageFile.c  ManageFile.h
Functions/Modi/: Longitudinali.c  Longitudinali.h
Functions/Routh/: Routh.c  Routh.h
